add annoy-o-matic exercise

--- a/JS Basics/while.html
+++ b/JS Basics/while.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>While Loops Problem Set</title>
+    <!-- <script src="while.js"></script> -->
     <script src="while.js"></script>
 </head>
 <body>
