--- a/Color Game/colorGame.html
+++ b/Color Game/colorGame.html
@@ -3,9 +3,15 @@
 <head>
     <title>Color Game</title>
     <link rel="stylesheet" href="colorGame.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <h1>
+    The Great 
+    <br>
+        <span id="colorDisplay">RGB</span> 
+        <br>
+        Color Game</h1>
 
     <div id="stripe">
         <button id="reset">New Colors</button>
