--- a/Todo List Project/index.html
+++ b/Todo List Project/index.html
@@ -6,6 +6,17 @@
     <script src="assets/js/lib/jquery-3.4.1.min.js"></script>
 </head>
 <body>
+
+    <div id="container">
+        <h1>To-Do List</h1>
+        <input type="text">
+
+        <ul>
+            <li><span>X</span> Go To Potions Class</li>
+            <li><span>X</span> Buy New Robes</li>
+            <li><span>X</span> Visit Hagrid</li>
+        </ul>
+    </div>
     
 <script src="assets/js/todos.js"></script>
 </body>
