--- a/Todo List Project/index.html
+++ b/Todo List Project/index.html
@@ -3,13 +3,14 @@
 <head>
     <title>Todo List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <script src="assets/js/lib/jquery-3.4.1.min.js"></script>
 </head>
 <body>
 
     <div id="container">
         <h1>To-Do List</h1>
-        <input type="text">
+        <input type="text" placeholder="Add New Todo">
 
         <ul>
             <li><span>X</span> Go To Potions Class</li>
