--- a/Todo List Project/index.html
+++ b/Todo List Project/index.html
@@ -4,18 +4,19 @@
     <title>Todo List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <script src="assets/js/lib/jquery-3.4.1.min.js"></script>
 </head>
 <body>
 
     <div id="container">
-        <h1>To-Do List</h1>
+        <h1>To-Do List<i class="fa fa-plus"></i></h1>
         <input type="text" placeholder="Add New Todo">
 
         <ul>
-            <li><span>X</span> Go To Potions Class</li>
-            <li><span>X</span> Buy New Robes</li>
-            <li><span>X</span> Visit Hagrid</li>
+            <li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
+            <li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
+            <li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
         </ul>
     </div>
     
