--- a/Todo List Project/index.html
+++ b/Todo List Project/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="container">
-        <h1>To-Do List<i class="fa fa-plus"></i></h1>
+        <h1>To-Do List<span id="toggle-form"><i class="fa fa-plus"></i></span></h1>
         <input type="text" placeholder="Add New Todo">
 
         <ul>
