--- a/Circles/circles.html
+++ b/Circles/circles.html
@@ -5,12 +5,22 @@
     <script src="paper-full.js"></script>
     <link rel="stylesheet" type="text/css" href="circles.css">
     <script type="text/paperscript" canvas="myCanvas">
+
+    var circles = [];
     function onKeyDown(event) {
     var maxPoint = new Point(view.size.width, view.size.height);
     var randomPoint = Point.random();
     var point = maxPoint * randomPoint;
+    var newCircle = new Path.Circle(point, 500)
+    newCircle.fillColor = "orange";
+    circles.push(newCircle);
+    }
 
-    new Path.Circle(point, 10).fillColor = "orange";
+    function onFrame(event){
+        for(var i = 0; i < circles.length; i++){
+            circles[i].fillColor.hue += 1;
+            circles[i].scale(.9);
+        }
     }
 
     </script>
